# DeFi-Arbitrage-Bot-POC

./: .bandit.yml  .coveragerc  .dockerignore  .env.arbitrum  .env.bak  .env.bak2  .env.example  .gitignore  .gitleaks.toml  .slither.config.json  5K_MONTHLY_ROADMAP.md  ARBITRUM_DEPLOYMENT_COMPLETE.md  ARBITRUM_DEPLOYMENT_INSTRUCTIONS.md  ARBITRUM_STATUS.md  BOT_TEST_SUMMARY.md  CAPITAL_ANALYSIS_5K_MONTHLY.md  CAPITAL_DEPLOYMENT_PLAN.md  CHAIN_ORDER_QUICK_REFERENCE.md  CHAIN_PRIORITY_PROFITABILITY_ANALYSIS.md  COMPETITOR_TECH_STACK.md  COMPLETE_POC_VALIDATION.md  CONVERSATION_SUMMARY.md  DATABASE_SCHEMA.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_QUICK_CHECKLIST.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_STATUS.md  DETECTOR_README.md  DRY_RUN_RESULTS.md  Dockerfile  E2E_VALIDATION_REPORT.md  FINAL_E2E_VALIDATION.md  FLASH_LOAN_OPTIMIZATION_IMPLEMENTED.md  IMPLEMENTATION_PLAN.md  MAINNET_DEPLOYMENT_GUIDE.md  MAINNET_DEPLOYMENT_INSTRUCTIONS.md  MARKET_ANALYSIS.md  MULTI_CHAIN_DEPLOYMENT_GUIDE.md  Makefile  OPERATIONS_GUIDE.md  (+56 more)
agent/: Dockerfile  pm_agent.py  requirements.txt
alembic/: env.py
config/: alert_rules.yml  arbitrum_deployment.json  config.json  prometheus.yml
contracts/: BalancerFlashLoan.sol  FlashLoanArbitrage.sol  FlashLoanArbitrageV2.sol  FlashLoanLiquidator.sol  MockDEX.sol  MockERC20.sol
dashboard/: Dockerfile
docs/: ADVANCED_OPTIMIZATION.md  AGENT_REPORT_ARCHITECTURE.md  AGENT_REPORT_CHAOS_FAULT_MODEL.md  AGENT_REPORT_CONTRACT_AUDIT.md  AGENT_REPORT_DEVILS_ADVOCATE.md  AGENT_REPORT_FORK_TESTING.md  AGENT_REPORT_INFRASTRUCTURE.md  AGENT_REPORT_MEV_THREAT_MODEL.md  AGENT_REPORT_QA.md  AGENT_REPORT_QE.md  AGENT_REPORT_UX.md  AGENT_SYNTHESIS.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE_MIGRATION_RUNBOOK.md  DEPLOYMENT.md  MAINNET_DEPLOYMENT_CHECKLIST.md  OPERATIONS_RUNBOOK.md  PRODUCTION_CHECKLIST.md  PROJECT_STATE_REPORT.md  QUICKSTART.md  SCALING_STRATEGY.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  TESTNET_MANUAL_TESTING.md  TROUBLESHOOTING.md  VALIDATION_CHECKLIST.md  testing-guide.md
script/: Deploy.s.sol  Verify.s.sol  anvil_e2e_test.sh  deploy.sh  e2e_fork_test.py  testnet_deploy_guide.sh
scripts/: README.md  analyze_performance.py  analyze_validation_run.py  backup_config.sh  benchmark.py  check_arbitrum_balance.py  (+31 more)
(+135 files in other folders)
